# financeiro

./: CODEOWNERS  Dockerfile  Procfile  README.md  config.py  fly.toml  pyproject.toml
extratos/: 2020-01-bb.ofx  2020-02-bb.ofx  2020-03-bb.ofx  2020-04-bb.ofx  2020-05-bb.ofx  2020-06-bb.ofx  2020-07-bb.ofx  2020-08-bb.ofx  2020-09-bb.ofx  2020-10-bb.ofx  2020-11-bb.ofx  2020-12-bb.ofx  2021-01-bb.ofx  2021-02-bb.ofx  2021-03-bb.ofx  2021-04-bb.ofx  2021-05-bb.ofx  2021-06-bb.ofx  2021-07-bb.ofx  2021-08-bb.ofx  2021-09-bb.ofx  2021-10-bb.ofx  2021-11-bb.ofx  2021-12-bb.ofx  2022-01-bb.ofx  2022-02-bb.ofx  2022-03-bb.ofx  2022-04-bb.ofx  2022-05-bb.ofx  2022-06-bb.ofx  2022-07-bb.ofx  2022-08-bb.ofx  2022-09-bb.ofx  2022-10-bb.ofx  2022-11-bb.ofx  2022-12-bb.ofx  2023-01-bb.ofx  2023-02-bb.ofx  2023-03-bb.ofx  2023-04-bb.ofx  (+28 more)
financeiro/: 2020-01.beancount  2020-02.beancount  2020-03.beancount  2020-04.beancount  2020-05.beancount  2020-06.beancount  2020-07.beancount  2020-08.beancount  2020-09.beancount  2020-10.beancount  2020-11.beancount  2020-12.beancount  2021-01.beancount  2021-02.beancount  2021-03.beancount  2021-04.beancount  2021-05.beancount  2021-06.beancount  2021-07.beancount  2021-08.beancount  2021-09.beancount  2021-10.beancount  2021-11.beancount  2021-12.beancount  2022-01.beancount  2022-02.beancount  2022-03.beancount  2022-04.beancount  2022-06.beancount  2022-07.beancount  2022-08.beancount  2022-09.beancount  2022-10.beancount  2022-11.beancount  2022-12.beancount  2023-01.beancount  2023-02.beancount  2023-03.beancount  2023-04.beancount  (+31 more)
(+4 files in other folders)
